--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Game</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <div class="background">
@@ -13,6 +13,6 @@
     </div>
 
 
-<script src="/src/index.js" charset="UTF-8" defer></script>
+<script src="./src/index.js" charset="UTF-8" defer></script>
 </body>
 </html>
