--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Game</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://rodolfosouzamenezes.github.io/chrome-dino-game/styles/styles.css">
 </head>
 <body>
     <div class="background">
